# xaion-skill-taxonomy

./: .env.sample  .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml
data/input/sql/: resume.sql
data/output/statistics/: statistics.json
data/prompt/: skill_matcher.yaml
src/: db.py  gpt.py  schema.py  utils.py
